Update work experience and skills

--- a/index.html
+++ b/index.html
@@ -170,24 +170,24 @@
           <h3>Current Skill Level</h3>
           <ul class="skill-bars">
             <li>
-              <div class="progress percent90"><span>90%</span></div>
-              <strong>JavaScript</strong>
-            </li>
-            <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <div class="progress percent95"><span>95%</span></div>
               <strong>Node.JS</strong>
             </li>
             <li>
+              <div class="progress percent95"><span>95%</span></div>
+              <strong>Nest.Js</strong>
+            </li>
+            <li>
               <div class="progress percent90"><span>90%</span></div>
-              <strong>Express.Js</strong>
+              <strong>Ruby on Rails</strong>
+            </li>
+            <li>
+              <div class="progress percent90"><span>90%</span></div>
+              <strong>Git &amp; Github</strong>
             </li>
             <li>
               <div class="progress percent80"><span>80%</span></div>
-              <strong>HTML5</strong>
-            </li>
-            <li>
-              <div class="progress percent75"><span>75%</span></div>
-              <strong>CSS3</strong>
+              <strong>ReactJs</strong>
             </li>
           </ul>
           <!-- /skill-bars -->
@@ -197,23 +197,23 @@
           <ul class="skill-bars">
             <li>
               <div class="progress percent90"><span>90%</span></div>
-              <strong>TypeScript</strong>
-            </li>
-            <li>
-              <div class="progress percent85"><span>85%</span></div>
-              <strong>Bootstrap</strong>
-            </li>
-            <li>
-              <div class="progress percent90"><span>90%</span></div>
-              <strong>MySQL &amp; PostgreSQL</strong>
-            </li>
-            <li>
-              <div class="progress percent80"><span>80%</span></div>
               <strong>GoLang</strong>
             </li>
             <li>
-              <div class="progress percent70"><span>70%</span></div>
-              <strong>Adobe Photoshop</strong>
+              <div class="progress percent90"><span>90%</span></div>
+              <strong>TypeScript</strong>
+            </li>
+            <li>
+              <div class="progress percent90"><span>90%</span></div>
+              <strong>MySQL, MongoDB &amp; PostgreSQL</strong>
+            </li>
+            <li>
+              <div class="progress percent90"><span>90%</span></div>
+              <strong>Linux</strong>
+            </li>
+            <li>
+              <div class="progress percent80"><span>80%</span></div>
+              <strong>AWS, Heroku &amp; Render </strong>
             </li>
           </ul>
           <!-- /skill-bars -->
@@ -226,7 +226,7 @@
             >Hire Me</a
           >
           <a
-            href="https://drive.google.com/file/d/1qe6kHMI18RxwAniKa_CH6nQVW-4dHI1d/view?usp=sharing"
+            href="https://drive.google.com/file/d/1Hn-NepSAv8xTumXbk7UonAhMd-EIVknc/view?usp=sharing"
             target="_blank"
             title="Download CV"
             class="button button-primary"
@@ -280,6 +280,11 @@
               <div class="timeline-content">
                 <h4>Helicarrier</h4>
                 <p>
+                  • Ship new microservices built with Ruby on Rails and Golang <br />
+                  • Improve fraud detection and management systems on Sendcash and Buycoins Pro<br />
+                  • Maintain the Order Matching Engine and integrate third-party multiple Onramp and Offramp services <br />
+                  • Working with React on the frontend to give our users a smooth UX <br />
+                  • Implement unit tests using RSpec
                 </p>
               </div>
             </div>
@@ -296,15 +301,15 @@
 
               <div class="timeline-header">
                 <h3>Backend Software Engineer</h3>
-                <p>Feb 2021 - Mar 2022</p>
+                <p>Feb 2021 - Apr 2022</p>
               </div>
 
               <div class="timeline-content">
                 <h4>Chainconsults</h4>
                 <p>
-                  • Working closely with a team of software engineers as a lead backend developer to design software architecture, implement Application Programming Interfaces (APIs) for a finance application that provides workers with the benefit of withdrawing part of their salary before payday. This project
+                  • Worked closely with a team of software engineers as a lead backend developer to design software architecture, implement Application Programming Interfaces (APIs) for a finance application that provides workers with the benefit of withdrawing part of their salary before payday. This project
                   involves the integration of third-party payment systems such as Paystack and WalletsAfrica payout and settlement APIs. The technologies used include; NestJs with Express, Postgresql with objection ORM, Heroku cloud application platform, Paystack, and Redis. <br />
-                  • Writing unit tests using Jest and Supertest frameworks to ensure the correctness of the codebase. <br />
+                  • Wrote unit tests using Jest and Supertest frameworks to ensure the correctness of the codebase. <br />
                   • I managed and supervised a team of engineering interns in building a demo delivery tracker application that helped our business partners and their customers track and document various stages of their commodities delivery. Technologies used include Nodejs with Express and Inversify IoC container, MongoDB, and Heroku. <br />
                 </p>
               </div>
@@ -1035,7 +1040,7 @@
 
         <div class="col-eight tab-full">
           <div class="copyright">
-            <span>© Copyright 2022 </span>
+            <span>© Copyright 2023 </span>
             <span>Chemical Stan</span>
           </div>
         </div>
