delete redundat files

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/buycoins-pro.gif"
-                  alt="Beetle"
+                  alt="Buycoins Pro"
                 />
                 <a href="#modal-01" class="overlay">
                   <div class="folio-item-table">
@@ -501,7 +501,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/sendcash.gif"
-                  alt="Beetle"
+                  alt="Sendcash"
                 />
                 <a href="#modal-02" class="overlay">
                   <div class="folio-item-table">
@@ -522,7 +522,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/chaininvoice.gif"
-                  alt="Beetle"
+                  alt="Chain Invoice"
                 />
                 <a href="#modal-03" class="overlay">
                   <div class="folio-item-table">
@@ -543,7 +543,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/rapidkredit.gif"
-                  alt="Beetle"
+                  alt="Rapidkredit"
                 />
                 <a href="#modal-04" class="overlay">
                   <div class="folio-item-table">
@@ -564,7 +564,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/ghfinder.gif"
-                  alt="Shutterbug"
+                  alt="Github Finder"
                 />
                 <a href="#modal-05" class="overlay">
                   <div class="folio-item-table">
@@ -585,7 +585,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/Loan-calculator.gif"
-                  alt="Liberty"
+                  alt="Loan Calculator"
                 />
                 <a href="#modal-06" class="overlay">
                   <div class="folio-item-table">
@@ -606,7 +606,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/fototells.gif"
-                  alt="Shutterbug"
+                  alt="Fototells"
                 />
                 <a href="#modal-07" class="overlay">
                   <div class="folio-item-table">
@@ -627,7 +627,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/task-list.gif"
-                  alt="Beetle"
+                  alt="Task List"
                 />
                 <a href="#modal-08" class="overlay">
                   <div class="folio-item-table">
@@ -648,7 +648,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/number-guesser.gif"
-                  alt="Clouds"
+                  alt="Number Guesser"
                 />
                 <a href="#modal-09" class="overlay">
                   <div class="folio-item-table">
@@ -669,7 +669,7 @@
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
                   src="images/giphy/eBookSeller.gif"
-                  alt="Salad"
+                  alt="eBook Seller"
                 />
                 <a href="#modal-10" class="overlay">
                   <div class="folio-item-table">
