--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <p>
                   • Ship new microservices built with Ruby on Rails and Golang <br />
                   • Improve fraud detection and management systems on Sendcash and Buycoins Pro<br />
-                  • Maintain the Order Matching Engine and integrate third-party multiple Onramp and Offramp services <br />
+                  • Maintain the Order Matching Engine and integrate multiple third-party Onramp and Offramp services <br />
                   • Working with React on the frontend to give our users a smooth UX <br />
                   • Implement unit tests using RSpec
                 </p>
