--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h1>I'm Stanley Ebuka.</h1>
 
             <p class="intro-position">
-              <span>Full-stack Developer</span>
+              <span>Full-stack Software Engineer</span>
               <!-- <span>UI/UX Designer</span>  -->
             </p>
 
@@ -150,7 +150,7 @@
 
             <p class="lead">
               Hey there! Welcome to my portfolio &#128513 <br/>
-              I'm Stanley, goal-driven Full-stack software engineer. I have experience building highly performant, scalable, resilient, and secure microservices using recent technologies. I'm also passionate about problem-solving techniques, especially in web and mobile development. Stick around for more information about my skill set. &#127940
+              I'm Stanley, a goal-driven full-stack software engineer with over 4 years of professional experience building highly performant, scalable, and secure microservices using recent technologies. I'm passionate about problem-solving, especially in web and mobile development. Stick around for more information about my skill set. &#127940
               <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
               solving problems and learning recent technologies, especially in
