--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             >Hire Me</a
           >
           <a
-            href="https://drive.google.com/file/d/1Hn-NepSAv8xTumXbk7UonAhMd-EIVknc/view?usp=sharing"
+            href="https://drive.google.com/file/d/1WyxlS1EbA2Jl88Nx4DDvOXqO3vJjvS-K/view?usp=share_link"
             target="_blank"
             title="Download CV"
             class="button button-primary"
