--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <img src="images/profile-pic.jpg" alt="Profile Picture" />
 
             <p class="lead">
-              Hey there! Welcome to my portfolio &#128513 <br/>
+              Hey there! Welcome to my portfolio &#127881; <br/>
               I'm Stanley, a goal-driven full-stack software engineer with over 4 years of professional experience building highly performant, scalable, and secure microservices using recent technologies. I'm passionate about problem-solving, especially in web and mobile development. Stick around for more information about my skill set. &#127940
               <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
