replace mobile number

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             >Hire Me</a
           >
           <a
-            href="https://drive.google.com/file/d/1WyxlS1EbA2Jl88Nx4DDvOXqO3vJjvS-K/view?usp=share_link"
+            href="https://drive.google.com/file/d/1ErUIMSUNEB03rPnnItwtsn_25i99YfOv/view?usp=sharing"
             target="_blank"
             title="Download CV"
             class="button button-primary"
@@ -280,10 +280,10 @@
               <div class="timeline-content">
                 <h4>Helicarrier</h4>
                 <p>
-                  • Ship new microservices built with Ruby on Rails and Golang <br />
-                  • Improve fraud detection and management systems on Sendcash and Buycoins Pro<br />
-                  • Maintain the Order Matching Engine and integrate multiple third-party Onramp and Offramp services <br />
-                  • Working with React on the frontend to give our users a smooth UX <br />
+                  • Optimized the fraud detection and management systems on both Sendcash and Buycoins Pro platforms, enhancing security measures and ensuring more robust fraud prevention. <br />
+                  • Enhanced the order-matching engine algorithm to leverage Go concurrency, resulting in a remarkable 10% reduction in latency.<br />
+                  • Implemented comprehensive unit tests using RSpec, resulting in a significant increase in test coverage from 75% to 84%, ensuring more thorough and reliable code validation. <br />
+                  • Proficiently employed advanced reverse engineering methodologies by utilizing cutting-edge tools such as Proximan, Frida, apk-mitm, jadx GUI, GraphQL introspection, and Android ADB to integrate understanding of software architectures.<br />
                   • Implement unit tests using RSpec
                 </p>
               </div>
@@ -307,10 +307,10 @@
               <div class="timeline-content">
                 <h4>Chainconsults</h4>
                 <p>
-                  • Worked closely with a team of software engineers as a lead backend developer to design software architecture, implement Application Programming Interfaces (APIs) for a finance application that provides workers with the benefit of withdrawing part of their salary before payday. This project
-                  involves the integration of third-party payment systems such as Paystack and WalletsAfrica payout and settlement APIs. The technologies used include; NestJs with Express, Postgresql with objection ORM, Heroku cloud application platform, Paystack, and Redis. <br />
-                  • Wrote unit tests using Jest and Supertest frameworks to ensure the correctness of the codebase. <br />
-                  • I managed and supervised a team of engineering interns in building a demo delivery tracker application that helped our business partners and their customers track and document various stages of their commodities delivery. Technologies used include Nodejs with Express and Inversify IoC container, MongoDB, and Heroku. <br />
+                  • Setup and manage CI/CD pipelines on new and existing projects, reducing deployment time by 30% <br />
+                  • Collaborated with software engineers as lead backend developer for RapidKredit, a finance app offering salary advance. Designed architecture and implemented APIs. Successfully integrated third-party payment systems like Paystack and WalletsAfrica enhancing financial access for partner employees. <br />
+                  • Enhanced logistics efficiency by spearheading interns in creating a delivery tracker app, resulting in streamlined processes. Achieved a measurable 20% improvement in delivery tracking accuracy and operational speed. <br />
+                  • Implemented Unit tests using Jest and Supertest frameworks to ensure the correctness of the codebase.<br />
                 </p>
               </div>
             </div>
@@ -1045,7 +1045,7 @@
 
           <h5>Call Me At</h5>
 
-          <p>Mobile: (+234) 813 651 2302</p>
+          <p>Mobile: (+234) 813 651 XXX</p>
         </div>
       </div>
       <!-- /contact-info -->
