--- a/index.html
+++ b/index.html
@@ -226,12 +226,14 @@
             >Hire Me</a
           >
           <a
-            href="https://drive.google.com/file/d/1Hn-NepSAv8xTumXbk7UonAhMd-EIVknc/view?usp=sharing"
+            href="https://drive.google.com/file/d/1ErUIMSUNEB03rPnnItwtsn_25i99YfOv/view?usp=sharing
+            "
             target="_blank"
             title="Download CV"
             class="button button-primary"
             >Download CV</a
-          >
+            >
+            <!-- href="https://drive.google.com/file/d/1Hn-NepSAv8xTumXbk7UonAhMd-EIVknc/view?usp=sharing" -->
         </div>
       </div>
     </section>
@@ -279,6 +281,7 @@
 
               <div class="timeline-content">
                 <h4>Helicarrier</h4>
+                <h6 style="font-size: 0.7em;">📍 Remote · USA</h6>
                 <p>
                   • Ship new microservices built with Ruby on Rails and Golang <br />
                   • Improve fraud detection and management systems on Sendcash and Buycoins Pro<br />
@@ -306,6 +309,7 @@
 
               <div class="timeline-content">
                 <h4>Chainconsults</h4>
+                <h6 style="font-size: 0.7em;">📍 Remote · Lagos, Nigeria</h6>
                 <p>
                   • Worked closely with a team of software engineers as a lead backend developer to design software architecture, implement Application Programming Interfaces (APIs) for a finance application that provides workers with the benefit of withdrawing part of their salary before payday. This project
                   involves the integration of third-party payment systems such as Paystack and WalletsAfrica payout and settlement APIs. The technologies used include; NestJs with Express, Postgresql with objection ORM, Heroku cloud application platform, Paystack, and Redis. <br />
@@ -326,12 +330,13 @@
               </div>
 
               <div class="timeline-header">
-                <h3>Junior Software Engineer</h3>
+                <h3>Junior Software Engineer </h3>
                 <p>June 2020 - Feb 2021</p>
               </div>
 
               <div class="timeline-content">
-                <h4>UpliftHub</h4>
+                <h4>UpliftHub </h4>
+                <h6 style="font-size: 0.7em;">📍 Remote · Bauchi, Nigeria</h6>
                 <p>
                   • I Led a team of 4 software engineers in increasing system reliability by up to 70% by primarily decomposing existing monolithic applications into microservices using Node.js and Express.js <br />
                   • Sharing responsibilities with team members to build and
@@ -363,6 +368,7 @@
 
               <div class="timeline-content">
                 <h4>Andela</h4>
+                <h6 style="font-size: 0.7em;">📍 Remote · Lagos, Nigeria</h6>
                 <p>
                   • I actively participated in various tech enlightening boot camps and meet-ups. <br />
                   • Involved in the design, documentation, implementation, and testing of the RESTful APIs powering Andela’s BarefootNomad product while following strict guidelines. <br />
@@ -391,6 +397,7 @@
 
               <div class="timeline-content">
                 <h4>HNG Internship</h4>
+                <h6 style="font-size: 0.7em;">📍 Remote · Lagos, Nigeria</h6>
                 <p>
                   • Worked closely with software development teams on Slack,
                   maintaining websites built on basic vanilla Javascript PHP and
