--- a/index.html
+++ b/index.html
@@ -226,15 +226,12 @@
             >Hire Me</a
           >
           <a
-            href="https://drive.google.com/file/d/1ErUIMSUNEB03rPnnItwtsn_25i99YfOv/view?usp=sharing"
-            href="https://drive.google.com/file/d/1ErUIMSUNEB03rPnnItwtsn_25i99YfOv/view?usp=sharing
-            "
+            href="https://drive.google.com/file/d/1rYviVg47xEdYAmXekfS9ugLO15Jo1mWO/view?usp=sharing"
             target="_blank"
             title="Download CV"
             class="button button-primary"
             >Download CV</a
             >
-            <!-- href="https://drive.google.com/file/d/1Hn-NepSAv8xTumXbk7UonAhMd-EIVknc/view?usp=sharing" -->
         </div>
       </div>
     </section>
@@ -249,9 +246,7 @@
           <h1>More of my credentials.</h1>
 
           <p class="lead">
-            I have been opportune to interact and work closely with quite a
-            number of teams in the software development Ecosystem. Here are some
-            of the companies and technologies I've worked with.
+            I’ve had the opportunity to interact and work closely with various teams across the software development ecosystem. Here are some of the companies and technologies I’ve collaborated with.
           </p>
         </div>
       </div>
@@ -1032,7 +1027,7 @@
           <h5>Where to find me</h5>
 
           <p>
-            Lagos, Nigeria.
+            Paris, France.
           </p>
         </div>
 
