--- a/index.html
+++ b/index.html
@@ -427,6 +427,39 @@
               </div>
 
               <div class="timeline-header">
+                <h3>Masters Degree</h3>
+                <p>Aug 2024 - Aug 2026</p>
+              </div>
+
+              <div class="timeline-content">
+                <h4>
+                  <a
+                    href="https://www.audencia.com/en/our-programs/graduate"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Audencia Business School</a
+                  >
+                  <h6 style="font-size: 0.7em;">📍 Paris · France</h6>
+                </h4>
+                <h6>Data Science</h6>
+                <!-- <p>
+                  ● Petroleum Technology Development Fund (PTDF) scholar
+                  (2016/17). <br />
+                  ● Federal Government Scholarship Beneficiary (2017/18). <br />
+                  ● Best student in infrared, Mass, HNMR and C13 spectrum
+                  interpretations (2016/17). <br />
+                  ● Eight times Vice Chancellor's List award recipient. <br />
+                  ● Faculty of Science Best student (2016/17).
+                </p> -->
+              </div>
+            </div>
+            <!-- /timeline-block -->
+            <div class="timeline-block">
+              <div class="timeline-ico">
+                <i class="fa fa-graduation-cap"></i>
+              </div>
+
+              <div class="timeline-header">
                 <h3>Bachelor Degree</h3>
                 <p>Mar 2015 - Feb 2020</p>
               </div>
@@ -434,11 +467,12 @@
               <div class="timeline-content">
                 <h4>
                   <a
-                    href="http://atbu.edu.ng"
+                    href="https://atbu.edu.ng/"
                     target="_blank"
                     rel="noopener noreferrer"
-                    >Abubakar Tafawa-Balewa University</a
+                    >Abubakar Tafawa-Balewa University of Technology</a
                   >
+                  <h6 style="font-size: 0.7em;">📍 Bauchi · Nigeria</h6>
                 </h4>
                 <h6>B.Tech, Industrial Chemistry - First Class</h6>
                 <p>
@@ -482,15 +516,15 @@
               <div class="item-wrap">
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
-                  src="images/giphy/buycoins-pro.gif"
-                  alt="Buycoins Pro"
+                  src="images/giphy/sendcash.gif"
+                  alt="Sendcash"
                 />
-                <a href="#modal-01" class="overlay">
+                <a href="#modal-02" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">Buycoins Pro</h3>
+                      <h3 class="folio-title">Sendcash</h3>
                       <span class="folio-types">
-                        USDT Orderbook for Advanced Traders
+                        Cross-Border Payment | Cryptocurrency Offramp Platform
                       </span>
                     </div>
                   </div>
@@ -503,15 +537,15 @@
               <div class="item-wrap">
                 <img
                   style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;"
-                  src="images/giphy/sendcash.gif"
-                  alt="Sendcash"
+                  src="images/giphy/buycoins-pro.gif"
+                  alt="Buycoins Pro"
                 />
-                <a href="#modal-02" class="overlay">
+                <a href="#modal-01" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">Sendcash</h3>
+                      <h3 class="folio-title">Buycoins Pro</h3>
                       <span class="folio-types">
-                        Cross-Border Payment | Cryptocurrency Offramp Platform
+                        USDT Orderbook for Advanced Traders
                       </span>
                     </div>
                   </div>
@@ -771,7 +805,7 @@
 
               <div class="link-box">
                 <a
-                  href="https://chaininvoice.co/"
+                  href="#"
                   target="_blank"
                   >Official Website</a
                 >
@@ -801,7 +835,7 @@
 
               <div class="link-box">
                 <a
-                  href="https://www.rapidkredit.com/#/"
+                  href="#"
                   target="_blank"
                   >Official Website</a
                 >
