--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
               ></a>
             </li>
             <li>
-              <a href="https://instagram.com/chemicalstan"
+              <a href="https://instagram.com/0xstnly"
                 ><i class="fa fa-instagram"></i
               ></a>
             </li>
@@ -1126,7 +1126,7 @@
 
         <div class="col-eight tab-full">
           <div class="copyright">
-            <span>© Copyright 2024 </span>
+            <span>© Copyright 2025 </span>
             <span>Chemical Stan</span>
           </div>
         </div>
