--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           ></a>
         </li>
         <li>
-          <a href="https://instagram.com/chemicalstan"
+          <a href="https://instagram.com/0xstnly"
             ><i class="fa fa-instagram"></i
           ></a>
         </li>
