--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
             <p class="lead">
               Hey there! Welcome to my portfolio &#127881; <br/>
-              I'm Stanley, a goal-driven full-stack software engineer with over 4 years of professional experience building highly performant, scalable, and secure microservices using recent technologies. I'm passionate about problem-solving, especially in web and mobile development. Stick around for more information about my skill set. &#127940
+              I'm Stanley, a results-driven full-stack software engineer with 4+ years of experience building high-performance, scalable, and secure microservices using modern tech stacks. Currently, I'm expanding my expertise by transitioning into data science through an MSc in Data Science.I'm passionate about solving complex problems—particularly in web and mobile development—and I'm excited to blend these skills with data-driven insights. Stick around to explore my projects and skill set! &#127940
               <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
               solving problems and learning recent technologies, especially in
@@ -170,6 +170,10 @@
           <h3>Current Skill Level</h3>
           <ul class="skill-bars">
             <li>
+              <div class="progress percent80"><span>85%</span></div>
+              <strong>Python</strong>
+            </li>
+            <li>
               <div class="progress percent95"><span>95%</span></div>
               <strong>Node.JS</strong>
             </li>
@@ -185,10 +189,6 @@
               <div class="progress percent90"><span>90%</span></div>
               <strong>Git &amp; Github</strong>
             </li>
-            <li>
-              <div class="progress percent80"><span>80%</span></div>
-              <strong>ReactJs</strong>
-            </li>
           </ul>
           <!-- /skill-bars -->
         </div>
@@ -198,6 +198,10 @@
             <li>
               <div class="progress percent90"><span>90%</span></div>
               <strong>GoLang</strong>
+            </li>
+            <li>
+              <div class="progress percent85"><span>85%</span></div>
+              <strong>AWS, GCP &amp; AZURE </strong>
             </li>
             <li>
               <div class="progress percent90"><span>90%</span></div>
@@ -210,10 +214,6 @@
             <li>
               <div class="progress percent90"><span>90%</span></div>
               <strong>Linux</strong>
-            </li>
-            <li>
-              <div class="progress percent85"><span>85%</span></div>
-              <strong>AWS, Heroku &amp; Render </strong>
             </li>
           </ul>
           <!-- /skill-bars -->
@@ -1082,7 +1082,7 @@
 
           <h5>Call Me At</h5>
 
-          <p>Mobile: (+234) 813 651 XXX</p>
+          <p>Mobile: (+33) 687 XXX 279</p>
         </div>
       </div>
       <!-- /contact-info -->
