--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h1>I'm Stanley Ebuka.</h1>
 
             <p class="intro-position">
-              <span>Full-stack Software Engineer</span>
+              <span>Full-stack Software Engineer • MSc Data Science</span>
               <!-- <span>UI/UX Designer</span>  -->
             </p>
 
@@ -150,7 +150,7 @@
 
             <p class="lead">
               Hey there! Welcome to my portfolio &#127881; <br/>
-              I'm Stanley, a results-driven full-stack software engineer with 4+ years of experience building high-performance, scalable, and secure microservices using modern tech stacks. Currently, I'm expanding my expertise by transitioning into data science through an MSc in Data Science.I'm passionate about solving complex problems—particularly in web and mobile development—and I'm excited to blend these skills with data-driven insights. Stick around to explore my projects and skill set! &#127940
+              I'm Stanley, a results-driven full-stack software engineer with 4+ years of professional experience building high-performance, scalable, and secure microservices using modern tech stacks. Currently, I'm expanding my expertise by transitioning into data science through an MSc in Data Science.I'm passionate about solving complex problems—particularly in web and mobile development—and I'm excited to blend these skills with data-driven insights. Stick around to explore my projects and skill set! &#127940
               <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
               solving problems and learning recent technologies, especially in
@@ -226,7 +226,7 @@
             >Hire Me</a
           >
           <a
-            href="https://drive.google.com/file/d/1rYviVg47xEdYAmXekfS9ugLO15Jo1mWO/view?usp=sharing"
+            href="https://drive.google.com/file/d/1f7H1w7TWEtLUQGwvZal2dUW5ek5czHp-/view?usp=drive_link"
             target="_blank"
             title="Download CV"
             class="button button-primary"
@@ -271,7 +271,7 @@
               </div>
 
               <div class="timeline-header">
-                <h3>Backend Engineer</h3>
+                <h3>Lead Backend Engineer</h3>
                 <p>Mar 2022 - Present</p>
               </div>
 
