Fix skill level

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
             <p class="lead">
               Hey there! Welcome to my portfolio &#127881; <br/>
-              I'm Stanley, a results-driven full-stack software engineer with 4+ years of professional experience building high-performance, scalable, and secure microservices using modern tech stacks. Currently, I'm expanding my expertise by transitioning into data science through an MSc in Data Science.I'm passionate about solving complex problems—particularly in web and mobile development—and I'm excited to blend these skills with data-driven insights. Stick around to explore my projects and skill set! &#127940
+              I'm Stanley, a full-stack software engineer with 4+ years of experience building cool things on the internet. I'm currently transitioning into data science through an MSc in the field. Stick around to explore my work and see what I've been building! &#127940
               <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
               solving problems and learning recent technologies, especially in
@@ -170,23 +170,23 @@
           <h3>Current Skill Level</h3>
           <ul class="skill-bars">
             <li>
-              <div class="progress percent80"><span>85%</span></div>
+              <!-- <div class="progress percent80"><span>85%</span></div> -->
               <strong>Python</strong>
             </li>
             <li>
-              <div class="progress percent95"><span>95%</span></div>
+              <!-- <div class="progress percent95"><span>95%</span></div> -->
               <strong>Node.JS</strong>
             </li>
             <li>
-              <div class="progress percent95"><span>95%</span></div>
+              <!-- <div class="progress percent95"><span>95%</span></div> -->
               <strong>Nest.Js</strong>
             </li>
             <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <!-- <div class="progress percent90"><span>90%</span></div> -->
               <strong>Ruby on Rails</strong>
             </li>
             <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <!-- <div class="progress percent90"><span>90%</span></div> -->
               <strong>Git &amp; Github</strong>
             </li>
           </ul>
@@ -196,23 +196,23 @@
           <br />
           <ul class="skill-bars">
             <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <!-- <div class="progress percent90"><span>90%</span></div> -->
               <strong>GoLang</strong>
             </li>
             <li>
-              <div class="progress percent85"><span>85%</span></div>
+              <!-- <div class="progress percent85"><span>85%</span></div> -->
               <strong>AWS, GCP &amp; AZURE </strong>
             </li>
             <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <!-- <div class="progress percent90"><span>90%</span></div> -->
               <strong>TypeScript</strong>
             </li>
             <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <!-- <div class="progress percent90"><span>90%</span></div> -->
               <strong>MySQL, MongoDB &amp; PostgreSQL</strong>
             </li>
             <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <!-- <div class="progress percent90"><span>90%</span></div> -->
               <strong>Linux</strong>
             </li>
           </ul>
