--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8" />
-    <title>Stanley Ebuka</title>
+    <title>Stanley Okonkwo</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -54,7 +54,7 @@
           <a class="menu-toggle" href="#"><span>Menu</span></a>
 
           <div class="logo">
-            <a href="index.html">Stanley Ebuka</a>
+            <a href="index.html">Stanley Okonkwo</a>
           </div>
 
           <nav id="main-nav-wrap">
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="col-twelve">
             <h5>Hello.</h5>
-            <h1>I'm Stanley Ebuka.</h1>
+            <h1>I'm Stanley Ebuka</h1>
 
             <p class="intro-position">
               <span>Full-stack Software Engineer • MSc Data Science</span>
@@ -150,7 +150,7 @@
 
             <p class="lead">
               Hey there! Welcome to my portfolio &#127881; <br/>
-              I'm Stanley, a full-stack software engineer with 4+ years of experience building cool things on the internet. I'm currently transitioning into data science through an MSc in the field. Stick around to explore my work and see what I've been building! &#127940
+              I'm a full-stack software engineer with 4+ years of experience building stuff on the internet. I'm currently transitioning into data science through an MSc in the field. When I'm not working, you'll find me watching Arsenal play football, traveling, trying new cuisines, or going down rabbit holes on YouTube. Stick around to explore my work and see what I've been building! &#127940
               <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
               solving problems and learning recent technologies, especially in
@@ -223,7 +223,7 @@
       <div class="row button-section">
         <div class="col-twelve">
           <a href="#contact" title="Hire Me" class="button stroke smoothscroll"
-            >Hire Me</a
+            >Contact Me</a
           >
           <a
             href="https://drive.google.com/file/d/1f7H1w7TWEtLUQGwvZal2dUW5ek5czHp-/view?usp=drive_link"
