--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- ==============================
     Project:        Stanley Okonkwo Portfolio - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
     Version:        1.0
-    Author:         Stanley Okonkwo
+    Author:         Stanley Okonkwo | chemicalstan
     Primary use:    Portfolio.
     Email:          ebuka.eth@gmail.com
     Follow:         http://www.twitter.com/chemicalstan
@@ -18,10 +18,22 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8" />
-    <title>Stanley Okonkwo</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <title>Stanley Okonkwo | Stanley Ebuka | Chukwuebuka Stanley Okonkwo | Software Engineer & Data Scientist | chemicalstan</title>
+    <meta name="description" content="HI, I'm Stanley, a full-stack software engineer passionate about building scalable web and blockchain apps. I also have a Masters degree in Data Science from Audencia Business school. Let's work together."/>
+    <meta name="author" content="Stanley Okonkwo | chemicalstan" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Stanley's Portfolio" />
+    <meta property="og:description" content="Software Developer | Data Scientist | Data Analyst" />
+    <meta property="og:image" content="https://www.chemicalstan.xyz/preview.jpg" />
+    <meta property="og:url" content="https://www.chemicalstan.xyz" />
+    <meta property="og:type" content="website" />
 
+    <!-- Twitter Preview (optional) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Stanley's Portfolio" />
+    <meta name="twitter:description" content="A Software Developer | Data Scientist." />
+    <meta name="twitter:image" content="https://www.chemicalstan.xyz/preview.jpg" />
+    <link rel="canonical" href="https://www.chemicalstan.xyz" />
     <!-- mobile specific metas
    ================================================== -->
     <meta
@@ -42,7 +54,7 @@
 
     <!-- favicons
 	================================================== -->
-    <link rel="icon" type="image/png" href="images/icons/chemicalstan.ico" />
+    <link rel="icon" type="image/png" href="images/icons/chemicalstan.ico"alt="Stanley - Software Developer"/>
   </head>
 
   <body id="top">
