--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
               <div class="timeline-header">
                 <h3>Lead Backend Engineer</h3>
-                <p>Mar 2022 - Present</p>
+                <p>Mar 2022 - May 2025</p>
               </div>
 
               <div class="timeline-content">
